Fix scrollbar (#8)
* Fixed vertical scroll UI

* Started work fixing horizontal scroll

* Fixed wordwrap and scrollbar visibility

* Fixed phantom scroll bar bug

--- a/web/style.css
+++ b/web/style.css
@@ -3,6 +3,8 @@
 html,body{
   margin: 0;
   padding: 0;
+
+  overflow: hidden;
 }
 
 :root {
@@ -23,14 +25,16 @@ html,body{
   font-family: 'Roboto Mono', monospace;
   font-size: 1.1em;
   
-  width: 99%;
+  /* width: 99%; */
   padding: 10px;
   box-sizing: border-box;
 
-  overflow-y: hidden;
-  white-space: pre-wrap;
+  overflow: visible;
+  white-space: pre;
 
   caret-color: var(--highlight-text-color);
+
+  resize: none;
 }
 
 .fullscreen-padding{
@@ -40,13 +44,13 @@ html,body{
   
   top: 0;
   left: 0;
-  width: 100vw;
   height: 100vh;
   
   padding: 5px;
   
   box-sizing: border-box;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-X: scroll;
 }
 
 #output {
@@ -56,14 +60,18 @@ html,body{
 
 #input{
   border: none;
-  overflow: auto;
   outline: none;
+
+  width: 80%;
+  height: 90vh;
 
   color: rgb(0,0,0,0);
 
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
+
+  white-space: pre;
 
   resize: none;
 }
@@ -229,4 +237,29 @@ html,body{
 
 .equal{
   color: var(--equal-color);
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 7px;
+  /* height: 7px;    */
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgb(0,0,0,0);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(60,60,60);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(100,100,100);
+} 
+
+::-webkit-scrollbar-corner { 
+  background: rgba(0,0,0,0.5); 
 }
